# agentos

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  alembic.ini  conftest.py  pyproject.toml
.github/workflows/: ci-cd.yml
agents/: code_agent.py  critic_agent.py  llm_router.py  rag_agent.py  search_agent.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: store.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx
gateway/: __init__.py  auth.py  cache.py  config.py  database.py  main.py  models.py  schemas.py
gateway/observability/: kafka_producer.py  logging_setup.py  metrics.py
gateway/routers/: auth.py  documents.py  messages.py  metrics_router.py  sessions.py  ws.py
infra/docker/: docker-compose.yml  init.sql  prometheus.yml
infra/docker/grafana/dashboards/: agentos.json  dashboard.yml
infra/docker/grafana/datasources/: prometheus.yml
infra/k8s/: deploy.sh  deployment.yaml  infrastructure.yaml
mcp_server/: __init__.py  claude_desktop_config.example.json  server.py
orchestrator/: graph.py
scripts/: quickstart.sh
tests/e2e/: test_pipeline.py
tests/integration/: test_api.py
tests/unit/: test_agents.py
