[tool.poetry]
name = "agentos"
version = "0.1.0"
description = "Production Multi-Agent RAG Platform"
authors = ["Nikhil"]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
websockets = "^12.0"
python-multipart = "^0.0.9"

# Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# passlib 1.7.4 uses bcrypt.__about__.__version__ which was removed in bcrypt 4.x.
# Pinning to <4.0.0 prevents AttributeError and the downstream 72-byte password error.
bcrypt = ">=3.0.0,<4.0.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.3.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}

# LLM / Agents
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-google-genai = "^2.0.0"
langchain-community = "^0.3.0"
litellm = "^1.50.0"
langsmith = "^0.1.0"

# RAG
chromadb = "^0.5.0"
sentence-transformers = "^3.0.0"
ragas = "^0.2.0"

# Observability
prometheus-client = "^0.21.0"
opentelemetry-sdk = "^1.27.0"
kafka-python = "^2.0.0"
structlog = "^24.0.0"

# Validation
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"

# Tools
tavily-python = "^0.5.0"
httpx = "^0.27.0"
tenacity = "^9.0.0"

# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
